syntax = "proto3";

package proto.dynamic.v1;

option go_package = "github.com/mamoruuji/dynamic_novel_api/gen/proto/dynamic/v1;dynamicv1";

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string pen_name = 4;
  string text = 5;
  string image_url = 6;
}

message UpdateUserRequest {
  string user_id = 1;
}

message UpdateUserResponse {}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
}
